@@ -79,7 +79,6 @@ SET( CANTATA_SRCS
     gui/settings.cpp
     gui/covers.cpp
     gui/interfacesettings.cpp
-    gui/externalsettings.cpp
     gui/playbacksettings.cpp
     gui/serverplaybacksettings.cpp
     gui/serversettings.cpp
@@ -160,7 +159,6 @@ SET( CANTATA_MOC_HDRS
     gui/serversettings.h
     gui/preferencesdialog.h
     gui/interfacesettings.h
-    gui/externalsettings.h
     gui/trayitem.h
     models/musiclibrarymodel.h
     models/musiclibraryproxymodel.h
@@ -209,7 +207,6 @@ SET( CANTATA_UIS
     gui/streamspage.ui
     gui/serverinfopage.ui
     gui/interfacesettings.ui
-    gui/externalsettings.ui
     gui/playbacksettings.ui
     gui/serverplaybacksettings.ui
     gui/serversettings.ui
